# aoclibs

./: CMakeLists.txt  README.md  justfile
automation/: README.md  bashgen.c  bashgen.h  zshgen.c  zshgen.h
heap/: heap_alloc.c  heap_string.c  heap_string.h
info/: printfc.c  printfc.h  printh.c  printh.h
memory/: memory_utils.c  memory_utils.h
memory/heap/: heap_alloc.c  heap_alloc.h  heap_string.c  heap_string.h
tests/: bashgen-bmark.c  bashgen-zshgen-printh-bmark.c  justfile  printh-bmark.c  zshgen-bmark.c
tests/automation/: bashgen-bmark.c  bashgen-zshgen-printh-bmark.c  compile_flags.txt  zshgen-bmark.c
tests/heap/: compile_flags.txt  heap_string_test.c
tests/info/: compile_flags.txt  printh-bmark.c
tests/memory/heap/: compile_flags.txt  heap_string_test.c
